include_directories(${PROJECT_SOURCE_DIR}/core)
include_directories(${PROJECT_SOURCE_DIR}/solvers)
include_directories(${PROJECT_SOURCE_DIR}/systems)
include_directories(${PROJECT_SOURCE_DIR}/systems/frames)
include_directories(${PROJECT_SOURCE_DIR}/systems/plants)
include_directories(${PROJECT_SOURCE_DIR}/systems/plants/joints)
include_directories(${PROJECT_SOURCE_DIR}/systems/controllers)
include_directories(${PROJECT_SOURCE_DIR}/util)

if (LCM_FOUND AND NOT WIN32)
  add_executable(runLWRDynamics runDynamics.cpp)
  target_link_libraries(runLWRDynamics drakeRBM drakeRBSystem drakeLCMSystem)
  add_dependencies(runLWRDynamics drake_lcmtypes)
  pods_use_pkg_config_packages(runLWRDynamics lcm)
  #add_test(NAME runLWRDynamics COMMAND runLWRDynamics WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/examples/LWR)
endif()

#add_subdirectory(test)